chore(spindle-highlightjs-themes): rename package

--- a/packages/spindle-highlightjs-themes/index.html
+++ b/packages/spindle-highlightjs-themes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Spindle syntax styles</title>
+  <title>Spindle syntax themes</title>
   <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <meta name="description" content="Check the Spindle code syntax with some languages.">
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-<h1>Spindle syntax styles for highlight.js</h1>
+<h1>Spindle syntax themes for highlight.js</h1>
 <div class="select-theme">
   <label class="spui-DropDown-label is-active">
     <span class="spui-DropDown-visual" id="js-select-visual">Light</span>
