chore(spindle-syntax-themes): rename package

--- a/packages/spindle-highlightjs-themes/index.html
+++ b/packages/spindle-highlightjs-themes/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta name="description" content="Check the Spindle code syntax with some languages.">
   <link rel="stylesheet" href="https://unpkg.com/ameba-color-palette.css">
-  <link rel="stylesheet" href="./spindle-light.css">
-  <link rel="stylesheet" href="./spindle-dark.css" disabled>
+  <link rel="stylesheet" href="./highlightjs-light.css">
+  <link rel="stylesheet" href="./highlightjs-dark.css" disabled>
   <link rel="stylesheet" href="https://unpkg.com/@openameba/spindle-ui/Form/DropDown.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <style>
@@ -293,8 +293,8 @@
 <script src="https://unpkg.com/@highlightjs/cdn-assets@10.7.2/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
 <script type="module">
-  const lightCss = document.querySelector('link[href*="spindle-light.css"]');
-  const darkCss = document.querySelector('link[href*="spindle-dark.css"]');
+  const lightCss = document.querySelector('link[href*="highlightjs-light.css"]');
+  const darkCss = document.querySelector('link[href*="highlightjs-dark.css"]');
   const selectEl = document.querySelector('select[name="theme"]');
   const selectVisualEl = document.querySelector('#js-select-visual');
 
