--- a/packages/spindle-theme-switch/public/index.html
+++ b/packages/spindle-theme-switch/public/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
   <h1>Spindle Theme Switch</h1>
-  <spindle-theme-switch legend="テーマを切り替える" remember></spindle-theme-switch>
+  <spindle-theme-switch legend="テーマを切り替える" permanent></spindle-theme-switch>
 </body>
 </html>
