chore(spindle-theme-switch): add background transition to example

--- a/packages/spindle-theme-switch/public/index.html
+++ b/packages/spindle-theme-switch/public/index.html
@@ -8,6 +8,9 @@
   <meta name="color-scheme" content="light dark">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <style>
+    body {
+      transition: background 0.3s ease-out 0s;
+    }
     /* When you want to minimize layout shifts */
     spindle-theme-switch {
       display: block;
