docs(spindle-theme-switch): update docs

--- a/packages/spindle-theme-switch/public/index.html
+++ b/packages/spindle-theme-switch/public/index.html
@@ -17,7 +17,7 @@
       height: 34px;
       width: 84px;
     }
-    
+
     @media (prefers-reduced-motion: reduce) {
       body {
         transition-duration: 0.1ms;
@@ -30,6 +30,6 @@
 </head>
 <body>
   <h1>Spindle Theme Switch</h1>
-  <spindle-theme-switch appearance="switch" legend="テーマを切り替える" permanent></spindle-theme-switch>
+  <spindle-theme-switch appearance="switch" legend="テーマを切り替える"></spindle-theme-switch>
 </body>
 </html>
