refactor(spindle-ui): load animation token via link

--- a/packages/spindle-ui/.storybook/preview-head.html
+++ b/packages/spindle-ui/.storybook/preview-head.html
@@ -1,3 +1,5 @@
+
+<link rel="stylesheet" href="https://www.unpkg.com/@openameba/spindle-tokens@0.10.0/dist/css/spindle-tokens-animation.css" />
 <style>
   body {
     font-family: Meiryo, Yu Gothic Medium, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
